## Process this file with automake to produce Makefile.in

manualsdir = $(pkgdatadir)/doc/manuals

manuals_DATA = \
admin.tex \
admin.aux \
admin.dvi \
admin.log \
admin.pdf \
admin.ps \
admin.toc \
adminguide.tar.gz \
domainatrix.doc \
program.ps.gz \
EMBOSS-FreeBSD-HOWTO.txt \
emboss_qg.pdf \
emboss_qg.ps \
emboss.sty \
fdl.txt
