
pkgdata_DATA = aaindexextract.acd abiview.acd acdc.acd acdlog.acd \
	acdpretty.acd acdrelations.acd acdtable.acd acdtrace.acd acdvalid.acd ajbad.acd \
	ajfeatest.acd ajtest.acd aligncopy.acd aligncopypair.acd antigenic.acd \
	backtranambig.acd backtranseq.acd banana.acd \
	biosed.acd btwisted.acd cai.acd chaos.acd charge.acd checktrans.acd \
	chips.acd cirdna.acd codcmp.acd codcopy.acd coderet.acd complex.acd \
	compseq.acd cons.acd consambig.acd \
	corbatest.acd cpgplot.acd cpgreport.acd \
	cusp.acd cutgextract.acd cutseq.acd dan.acd dbiblast.acd \
	dbifasta.acd dbiflat.acd dbigcg.acd dbxfasta.acd dbxflat.acd \
	dbxgcg.acd dbxreport.acd dbxstat.acd \
	degapseq.acd density.acd descseq.acd \
	diffseq.acd digest.acd \
	distmat.acd dotmatcher.acd dotpath.acd dottup.acd dreg.acd \
	edialign.acd \
	einverted.acd embossdata.acd embossversion.acd emma.acd emowse.acd \
	edamclean.acd ensembltest.acd \
	entrails.acd entret.acd epestfind.acd eprimer3.acd equicktandem.acd \
	est2genome.acd etandem.acd \
	extractalign.acd extractfeat.acd extractseq.acd \
	featcopy.acd featreport.acd findkm.acd freak.acd \
	fuzznuc.acd fuzzpro.acd fuzztran.acd \
	garnier.acd geecee.acd getorf.acd \
	helixturnhelix.acd histogramtest.acd \
	hmoment.acd iep.acd infoalign.acd infobase.acd inforesidue.acd \
        infoseq.acd intconv.acd \
	isochore.acd jaspextract.acd jaspscan.acd lindna.acd listor.acd \
	makenucseq.acd makeprotseq.acd marscan.acd \
	maskambignuc.acd maskambigprot.acd maskfeat.acd maskseq.acd \
	matcher.acd megamerger.acd \
	merger.acd msbar.acd mwcontam.acd mwfilter.acd

pkgdata2_DATA = needle.acd needleall.acd \
	newcoils.acd newcpgreport.acd newcpgseek.acd \
	newseq.acd nohtml.acd noreturn.acd nospace.acd notab.acd \
	notseq.acd nthseq.acd nthseqset.acd \
	octanol.acd oddcomp.acd origsplitter.acd origunion.acd \
	palindrome.acd pasteseq.acd patmatdb.acd patmatmotifs.acd \
	patmattest.acd pepcoil.acd pepinfo.acd pepnet.acd pepstats.acd \
	pepwheel.acd pepwindow.acd pepwindowall.acd plotcon.acd plotorf.acd \
	polydot.acd preg.acd prettyplot.acd prettyseq.acd prima.acd \
	primers.acd primersearch.acd printsextract.acd profit.acd \
	prophecy.acd prophet.acd prosextract.acd pscan.acd psiphi.acd \
	rebaseextract.acd recoder.acd redata.acd remap.acd restover.acd \
	restrict.acd revseq.acd seealso.acd seqinfo.acd seqmatchall.acd \
	seqret.acd seqretall.acd seqretallfeat.acd \
	seqretset.acd seqretsetall.acd seqretsingle.acd seqretsplit.acd \
	seqrettype.acd showalign.acd \
	showdb.acd showfeat.acd showorf.acd \
	showpep.acd showseq.acd shuffleseq.acd \
	sigcleave.acd silent.acd sirna.acd \
	sixpack.acd sizeseq.acd skipredundant.acd skipseq.acd \
	splitsource.acd splitter.acd sqltest.acd stretcher.acd \
	stssearch.acd supermatcher.acd syco.acd \
	tcode.acd testplot.acd textsearch.acd tfextract.acd tfm.acd \
	tfscan.acd tmap.acd tranalign.acd transeq.acd treetypedisplay.acd \
	trimest.acd trimseq.acd trimspace.acd twofeat.acd union.acd \
        vectorstrip.acd water.acd whichdb.acd wobble.acd \
	wordcount.acd wordfinder.acd wordmatch.acd \
	wossname.acd yank.acd

pkgdata3_DATA =	codes.english  \
	groups.standard keywords.standard knowntypes.standard \
	sections.standard variables.standard

pkgdatadir=$(prefix)/share/$(PACKAGE)/acd
pkgdata2dir=$(prefix)/share/$(PACKAGE)/acd
pkgdata3dir=$(prefix)/share/$(PACKAGE)/acd
