
pkgdata_DATA = aaindexextract.acd abiview.acd acdc.acd \
	acdpretty.acd acdtable.acd acdtrace.acd acdvalid.acd \
	aligncopy.acd aligncopypair.acd antigenic.acd \
	backtranambig.acd backtranseq.acd banana.acd \
	biosed.acd btwisted.acd \
	cachedas.acd cachedbfetch.acd \
	cacheensembl.acd cacheebeyesearch.acd \
	cai.acd chaos.acd charge.acd checktrans.acd \
	chips.acd cirdna.acd codcmp.acd codcopy.acd coderet.acd \
	compseq.acd cons.acd consambig.acd \
	cpgplot.acd cpgreport.acd \
	cusp.acd cutgextract.acd cutseq.acd dan.acd \
	dbiblast.acd dbifasta.acd dbiflat.acd dbigcg.acd \
	dbtell.acd \
	dbxcompress.acd \
	dbxedam.acd dbxfasta.acd dbxflat.acd dbxgcg.acd dbxobo.acd \
	dbxreport.acd dbxresource.acd dbxstat.acd dbxtax.acd \
	dbxuncompress.acd \
	degapseq.acd density.acd descseq.acd \
	diffseq.acd digest.acd distmat.acd \
	dotmatcher.acd dotpath.acd dottup.acd dreg.acd \
	drfinddata.acd drfindformat.acd drfindid.acd drfindresource.acd \
	drget.acd drtext.acd \
	edamdef.acd edamhasinput.acd edamhasoutput.acd \
	edamisformat.acd edamisid.acd edamname.acd \
	edialign.acd \
	einverted.acd embossdata.acd embossversion.acd emma.acd emowse.acd \
	entret.acd epestfind.acd eprimer3.acd eprimer32.acd \
	equicktandem.acd est2genome.acd etandem.acd \
	extractalign.acd extractfeat.acd extractseq.acd \
	featcopy.acd featreport.acd feattext.acd findkm.acd freak.acd \
	fuzznuc.acd fuzzpro.acd fuzztran.acd \
	garnier.acd geecee.acd getorf.acd \
	godef.acd goname.acd helixturnhelix.acd \
	hmoment.acd iep.acd infoalign.acd infobase.acd inforesidue.acd \
        infoseq.acd \
	isochore.acd jaspextract.acd jaspscan.acd lindna.acd listor.acd \
	makenucseq.acd makeprotseq.acd marscan.acd \
	maskambignuc.acd maskambigprot.acd maskfeat.acd maskseq.acd \
	matcher.acd megamerger.acd \
	merger.acd msbar.acd mwcontam.acd mwfilter.acd

pkgdata2_DATA = needle.acd needleall.acd \
	newcpgreport.acd newcpgseek.acd \
	newseq.acd nohtml.acd noreturn.acd nospace.acd notab.acd \
	notseq.acd nthseq.acd nthseqset.acd \
	octanol.acd oddcomp.acd \
	ontocount.acd ontoget.acd ontogetcommon.acd ontogetdown.acd \
	ontogetobsolete.acd ontogetroot.acd \
	ontogetsibs.acd ontogetup.acd ontoisobsolete.acd ontotext.acd \
	palindrome.acd pasteseq.acd patmatdb.acd patmatmotifs.acd \
	pepcoil.acd pepdigest.acd pepinfo.acd pepnet.acd pepstats.acd \
	pepwheel.acd pepwindow.acd pepwindowall.acd plotcon.acd plotorf.acd \
	polydot.acd preg.acd prettyplot.acd prettyseq.acd \
	primersearch.acd printsextract.acd profit.acd \
	prophecy.acd prophet.acd prosextract.acd pscan.acd psiphi.acd \
	rebaseextract.acd recoder.acd redata.acd remap.acd restover.acd \
	restrict.acd revseq.acd seealso.acd \
	seqcount.acd seqmatchall.acd \
	seqret.acd \
	seqretsetall.acd seqretsplit.acd \
	seqxref.acd seqxrefget.acd servertell.acd showalign.acd \
	showdb.acd showfeat.acd showorf.acd \
	showpep.acd showseq.acd showserver.acd shuffleseq.acd \
	sigcleave.acd silent.acd sirna.acd \
	sixpack.acd sizeseq.acd skipredundant.acd skipseq.acd \
	splitsource.acd splitter.acd stretcher.acd \
	stssearch.acd supermatcher.acd syco.acd \
	taxget.acd taxgetdown.acd taxgetrank.acd \
	taxgetspecies.acd taxgetup.acd \
	tcode.acd textget.acd textsearch.acd tfextract.acd tfm.acd \
	tfscan.acd tmap.acd tranalign.acd transeq.acd \
	trimest.acd trimseq.acd trimspace.acd twofeat.acd \
	union.acd urlget.acd \
        vectorstrip.acd water.acd whichdb.acd wobble.acd \
	wordcount.acd wordfinder.acd wordmatch.acd \
	wossdata.acd wossinput.acd wossname.acd \
	wossoperation.acd wossoutput.acd wossparam.acd wosstopic.acd \
	yank.acd

pkgdata3_DATA =	codes.english  \
	groups.standard keywords.standard knowntypes.standard \
	sections.standard variables.standard

pkgdatadir=$(prefix)/share/$(PACKAGE)/acd
pkgdata2dir=$(prefix)/share/$(PACKAGE)/acd
pkgdata3dir=$(prefix)/share/$(PACKAGE)/acd
