SUBDIRS = AAINDEX CODONS REBASE PRINTS PROSITE JASPAR_CORE JASPAR_FAM \
	  JASPAR_PHYLOFACTS JASPAR_CNE JASPAR_POLII JASPAR_SPLICE \
	  JASPAR_PBM JASPAR_PBM_HLH JASPAR_PBM_HOMEO

pkgdata_DATA = EBLOSUM30 EBLOSUM35 EBLOSUM40 EBLOSUM45 EBLOSUM50 \
               EBLOSUM55 EBLOSUM60 EBLOSUM62 EBLOSUM62-12 EBLOSUM65 \
               EBLOSUM70 EBLOSUM75 EBLOSUM80 EBLOSUM85 EBLOSUM90 \
               EBLOSUMN EDNAFULL EDNAMAT EDNASIMPLE \
               EGC.0 EGC.1 EGC.10 EGC.11 EGC.12 EGC.13 EGC.14 EGC.15 EGC.16 \
               EGC.2 EGC.21 EGC.22 EGC.23 \
               EGC.3 EGC.4 EGC.5 EGC.6 EGC.9 EGC.index EGC.txt \
               ENUC.4.2 ENUC.4.4 \
               EPAM10 EPAM100 EPAM110 EPAM120 EPAM130 EPAM140 \
               EPAM150 EPAM160 EPAM170 EPAM180 EPAM190 EPAM20 \
               EPAM200 EPAM210 EPAM220 EPAM230 EPAM240 EPAM250 \
               EPAM260 EPAM270 EPAM280 EPAM290 EPAM30 EPAM300 \
               EPAM310 EPAM320 EPAM330 EPAM340 EPAM350 EPAM360 \
               EPAM370 EPAM380 EPAM390 EPAM40 EPAM400 EPAM410 \
               EPAM420 EPAM430 EPAM440 EPAM450 EPAM460 EPAM470 \
               EPAM480 EPAM490 EPAM50 EPAM500 EPAM60 EPAM70 EPAM80 EPAM90 \
               Eaa_acc_surface.dat Eaa_hydropathy.dat Eaa_properties.dat \
               Eamino.dat Eangles.dat Eangles_tri.dat Eantigenic.dat \
               Ebases.iub Edayhoff.freq Edna.melt Eembl.ior Eenergy.dat \
               Efeatures.embl Efeatures.emboss \
               Efeatures.gff Efeatures.gff3 \
               Efeatures.gffprotein Efeatures.gff3protein \
               Efeatures.pir Efeatures.protein Efeatures.refseqp \
               Efeatures.swiss \
               Efreqs.dat Ehet.dat Ehth.dat \
               Ehth87.dat Ememe.dat Emethylsites.dat Emolwt.dat Enakai.dat \
	       EnsemblAliases.dat EnsemblIdentifiers.dat \
               Epepcoil.dat Epk.dat \
               Epprofile Eprior1.plib Eprior30.plib Erna.melt Eresidues.iub \
               Esig.euk Esig.pro \
               Etags.embl Etags.emboss \
               Etags.gff Etags.gff3 Etags.gffprotein Etags.gff3protein \
               Etags.pir Etags.protein Etags.refseqp Etags.swiss \
               Etcode.dat Evdw.dat Ewhite-wimley.dat \
               embossre.equ Emwfilter.dat Emass.dat Emassmod.dat \
               Matrices.nucleotide Matrices.protein Matrices.proteinstructure \
               SSSUB edialignmat tp400_dna tp400_prot tp400_trans

pkgdatadir=$(prefix)/share/$(PACKAGE)/data

