## Process this file with automake to produce Makefile.in

jembossimagesdir = $(pkgdatadir)/jemboss/images

jembossimages_DATA = \
Backward_arrow_button.gif \
Forward_arrow_button.gif \
Go_button.gif \
Information_button.gif \
Jemboss_logo_greyback.gif \
Jemboss_logo_large.gif \
Jemboss_logo_small.gif \
Job_manager_button.gif \
Refresh_button.gif \
Refresh_button2.gif \
jay64.jpg
